Searching users by tradeable_card is now done through a single ajax request handled by cards controller

--- a/app/views/cards/return_first_search_result.js.erb
+++ b/app/views/cards/return_first_search_result.js.erb
@@ -1,1 +1,3 @@
 $("#display-card").html("<%= escape_javascript(render "card_display_first") %>"); 
+
+$("#display-users").html("<%= escape_javascript(render "/users/display_users", :users => @users) %>"); 
