--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -42,7 +42,7 @@
 <div id="display-card"></div>
 
 <div id="display-users">
-	<%= render "display_users" %>
+	<%= render "display_users", :users => @users %>
 </div>
 
 
