--- a/app/views/users/_display_users.html.erb
+++ b/app/views/users/_display_users.html.erb
@@ -11,7 +11,7 @@
 				<th>Trade</th>
 			</tr>
 		</thead>
-		<% @users.each do |user| %>
+		<% users.each do |user| %>
 			<tr>
 				<td>
 					<%= link_to user.full_name , user_path(user.id) %>
