--- a/app/views/users/find_users_by.js.erb
+++ b/app/views/users/find_users_by.js.erb
@@ -1,1 +1,1 @@
-$("#display-users").html("<%= escape_javascript(render "display_users") %>"); 
+// $("#display-users").html("<%= escape_javascript(render "display_users") %>"); 
