removed Turbolinks...thanks Josh

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,8 @@
   <head>
 
     <title>MTG TRADE BINDER DELUXXE</title>
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= stylesheet_link_tag    'application', media: 'all'%>
+    <%= javascript_include_tag 'application'%>
     <%= csrf_meta_tags %>
      <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
