wired the distance dropdown selector in the find trades partial to the card controller allowing for geolocation based card searches

--- a/app/views/users/_display_users.html.erb
+++ b/app/views/users/_display_users.html.erb
@@ -23,7 +23,7 @@
 					Online Now!
 				</td>
 				<td>
-					1km
+					<%= user.distance_to(current_user) %>
 				</td>
 				<td>
 					<h4><%= link_to "Propose Trade", new_user_trade_path(user.id) %> <br/> </h4>
