--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,14 @@
 
         <h1> MTG TRADE BINDER </h1>
           <% if current_user %>
-            Signed in as <%= current_user.email %>. <br/>at <%= current_user.latitude %> <%= current_user.longitude %> 
-            <%= link_to "Log out", session_path("current"), :method => :delete %><br>
+            Signed in as <%= current_user.email %> 
+            <%= link_to "Log out", session_path("current"), :method => :delete %> <br/>
+            Location:
+            <br/>
+            <%= current_user.address %> 
+            <br>
+            (<%= current_user.latitude %>, <%= current_user.longitude %>)
+            </br>
           <% end %>
     
     <!-- nav -->
