--- a/app/views/users/_tradeable_list.html.erb
+++ b/app/views/users/_tradeable_list.html.erb
@@ -59,7 +59,7 @@
 								<%= all_mana_cost_images(listed_card.card) %>
 							</td>
 							<td>
-								
+								<%= link_to "Propose Trade", new_user_trade_path(@user.id) %>
 							</td>
 						</tr>
 					<% i += 1 %>
