converted geocoder from miles to kilometers...updated table header as well

--- a/app/views/users/_display_users.html.erb
+++ b/app/views/users/_display_users.html.erb
@@ -7,7 +7,7 @@
 				<th>User</th>
 				<th>Can Give/ Can Receive</th>
 				<th>Last Online</th>
-				<th>Distance</th>
+				<th>Distance (km)</th>
 				<th>Trade</th>
 			</tr>
 		</thead>
