--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,8 +10,42 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  */
-
+@import "normalize";
 @import "bourbon";
 @import "neat";
-@import "users";
-@import "table_styling";
+@import "modules/modules";
+@import "base";
+a{
+font-weight: bold;
+font-size: 16px;
+text-decoration: none;
+}
+.formy{
+	td{
+		@include span-columns(6);
+				border-right: 1px solid blue;
+
+	}
+
+	tr{
+		@include span-columns(12);
+		
+	}
+	// td:last-of-type{
+	// 	@include span-columns(12);
+
+	// }
+	@include becoolfont(1.5em);
+	
+	.box{
+		@include span-columns(2);
+	}
+	.longbox{
+		@include span-columns(12);
+	}
+	.testpilot{
+		@include span-columns(2);
+		background-color: pink;
+		color: white;
+	}
+}
