--- a/app/assets/stylesheets/table_styling.scss
+++ b/app/assets/stylesheets/table_styling.scss
@@ -19,10 +19,13 @@
 
   th {
     text-align: left;
+
+
   }
 
   td {
     line-height: $base-line-height;
+    @include $becoolfont(5em);
   }
 
   button {
