--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,45 +14,56 @@
     
   </head>
 
-  <body>
-      <div class = " thehead"> <!-- Found in /stylesheets/modules/thehead.scss -->
-        <div class = "innerwrapper">
-          <div class ="maintitle">
-            <h4> The Magic,<br/> The Gathering,<br/> The Trade,<br/> The Binder </h4>
-          </div>
-          <div class = "signin">
-            <% if current_user %>
-          
-                <h4> Signed in as <%= current_user.email %></h4></br>
-                <%= link_to "Log out", session_path("current"), :method => :delete %>
-            <% end %>
-          </div>
+<body>
+  <div class = " thehead"> <!-- Found in /stylesheets/modules/thehead.scss -->
+      <div class ="maintitle">
+        <div class="text">
+          <h4> The Magic,<br/> The Gathering,<br/> The Trade,<br/> The Binder </h4>
         </div>
       </div>
-        
-  
+      <div class= "interface">
+        <div class = "signin">
+          <% if current_user %>
+            <h4> Signed in as <%= current_user.email %></h4></br>
+            <%= link_to "Log out", session_path("current"), :method => :delete %>
+          <% end %>
+          <h4>PUT ME IN ELSE <h4>
+        </div>
 
-    <!-- nav -->
-  
         <div class = "menu">
-           <div class ="menuitem"> <%= link_to "Card Search", cards_path%> </div>
-
-      
-        <% if current_user %>
-          <div class = "menuitem"><%= link_to "Trade Binder", user_path(current_user.id)%> </div>
-          <div class = "menuitem"><%= link_to "My Trades", user_trades_path(current_user.id) %></div>
-          <div class = "menuitem"><%= link_to "Find Trades", users_path%></div>
-          <div class = "menuitem"><%= link_to "Settings", root_path %></br></div>
-        <% else %>
-          <div class = "menuitem"><%= link_to "Log in", new_session_path %> </div>
-          <div class = "menuitem"><%= link_to "Sign up", new_user_path %></div>
-        <% end %>
+          <% if current_user %>
+            <div class = "menuitem"><%= link_to "Trade Binder", user_path(current_user.id)%> </div>
+            <div class = "menuitem"><%= link_to "My Trades", user_trades_path(current_user.id) %></div>
+            <div class = "menuitem"><%= link_to "Find Trades", users_path%></div>
+            <div class = "menuitem"><%= link_to "Settings", root_path %></br></div>
+          <% else %>
+            <div class = "menuitem"><%= link_to "Log in", new_session_path %> </div>
+            <div class = "menuitem"><%= link_to "Sign up", new_user_path %></div>
+          <% end %>
         </div>
-        <div class = "mainscreen">
-      
-        <%= yield %>
-        </div>
+  
+  </div>
 
-  </body>
+
+ </div>
+  <div class = "pokedex">
+    <div class ="search">
+      <%= render '/cards/search' %>
+    </div>
+    <div class="cardbox">
+    tweedle dumb
+    </div>
+  </div>
+
+  <!-- nav -->
+
+    
+
+      <div class = "mainscreen">
+    
+      <%= yield %>
+      </div>
+
+</body>
 
 </html>
