Added accordion tabs to trade show and new

--- a/app/views/trades/_display_tradeable_cards.html.erb
+++ b/app/views/trades/_display_tradeable_cards.html.erb
@@ -24,7 +24,7 @@
 				<% if @trade.other_user(user).wanted_cards.find_by(card_id: listed_card.card_id) != nil %>
 					<%= @trade.other_user(user).wanted_cards.find_by(card_id: listed_card.card_id).amount %>
 				<% else %>
-					0
+					None
 				<% end %>
 			</td>
 			<td>
