--- a/app/views/trades/_display_tradeable_wanted_cards.html.erb
+++ b/app/views/trades/_display_tradeable_wanted_cards.html.erb
@@ -21,10 +21,10 @@
 			<% end %>	
 			</td>
 			<td>
-				<% if user.wanted_cards.find_by(card_id: listed_card.card_id) != nil %>
-					<%= user.wanted_cards.find_by(card_id: listed_card.card_id).amount %>
+				<% if @trade.other_user(user).wanted_cards.find_by(card_id: listed_card.card_id) != nil %>
+					<%= @trade.other_user(user).wanted_cards.find_by(card_id: listed_card.card_id).amount %>
 				<% else %>
-					0
+					None
 				<% end %>
 			</td>
 			<td>
