Fixed typo in cmc search options

--- a/app/views/cards/_search.html.erb
+++ b/app/views/cards/_search.html.erb
@@ -8,7 +8,7 @@
 				</td>		
 				<td>
 					<%= ff.label :cmcmod, "CMC:" %>
-						<% cmcmod_options = [['<','>'],['<=','<='],['=','='], ['>=','>='],['>','>']] %>
+						<% cmcmod_options = [['<','<'],['<=','<='],['=','='], ['>=','>='],['>','>']] %>
 						<%= ff.select :cmcmod, cmcmod_options %>
 						<%= ff.number_field :cmc %>
 				</td>
