Removed empty lines, bindings etc

--- a/app/views/cards/_card_display.html.erb
+++ b/app/views/cards/_card_display.html.erb
@@ -13,7 +13,7 @@
 			Set
 		</th>
 		<th>
-			$$$
+			TCGMid
 		</th>
 		<th>
 			Add to Inventory
@@ -40,7 +40,7 @@
 				<%= card.card_set.name %>
 			</td>
 			<td>
-				$4.95
+				<a href="#">$4.95</a>
 			</td>
 			<td>
 				<%= link_to add_to_inventory_path(card.id), :method => :put do %> 
