added find cards nearby button that prepolualtes the search field on the users index page and executes the query

--- a/app/views/cards/_card_display_first.erb
+++ b/app/views/cards/_card_display_first.erb
@@ -1,3 +1,4 @@
+<% unless @cards == nil %>
 <h4>Looking for Users with</h4>
 <table class="table-minimal">
 	<tr>
@@ -37,7 +38,7 @@
 		</tr>
 	<% end %>
 </table>
-
+<% end %>
 
 
 
