--- a/app/views/cards/_search.html.erb
+++ b/app/views/cards/_search.html.erb
@@ -6,32 +6,50 @@
 			
 
 				<div class = "box ">						
-					<%= ff.label :name, "Card Name:" %>
-					<%= ff.text_field  :name %> 						
+					<div class ="name">
+						<%= ff.label :name, "Card Name:" %>
+					</div>
+					<div class ="input">
+						<%= ff.text_field  :name %>
+					</div> 	
 				</div>	
 
 				<div class = "box ">	
-					<%= ff.label :cmcmod, "CMC:" %>						
-					<% cmcmod_options = [['<','>'],['<=','<='],['=','='], ['>=','>='],['>','>']] %>
-					<%= ff.select :cmcmod, cmcmod_options %> 
-					<%= ff.number_field :cmc %>
+					<div class="name">
+						<%= ff.label :cmcmod, "CMC:" %>					
+					</div>	
+					<div class="input">
+						<% cmcmod_options = [['<','>'],['<=','<='],['=','='], ['>=','>='],['>','>']] %>
+						<%= ff.select :cmcmod, cmcmod_options %> 
+						<%= ff.number_field :cmc %>
+					</div>
 				</div>
 		
 				<div class = "box ">
-					<%= ff.label :artist, "Artist Name:" %>
-					<%= ff.text_field :artist %>
+					<div class="name">
+						<%= ff.label :artist, "Artist Name:" %>
+					</div>
+					<div class="input">
+						<%= ff.text_field :artist %>
+					</div>
 				</div>
+				
 				<div class = "box ">
-					<%= ff.label :card_set, "Card Set:" %>
-					
+					<div class="name">
+						<%= ff.label :card_set, "Card Set:" %>
+					</div>
+					<div class="input">										
 						<% set_options = ["All"] + CardSet.all.map { |set| set.name} %>		
 						<%= ff.select :card_set, set_options %>
+					</div>
 				</div>
 			
 		
 				<div class = "box ">
-					<%= ff.label :card_type, "Card Type:" %>
-					
+					<div class="name">
+						<%= ff.label :card_type, "Card Type:" %>
+					</div>
+					<div class="input">					
 						<% type_options = 
 							[
 							['',''],
@@ -58,27 +76,35 @@
 				
 						<%= ff.select :card_type, type_options %>
 					</div>
+				</div>
 
 				<div class = "box">
 
-					<%= ff.label :subtypes, "Card subtypes:" %>						
-					<%= ff.text_field :subtypes %>
+					<div class="name">
+						<%= ff.label :subtypes, "Card subtypes:" %>		
+					</div>				
+					<div class="input">					
+						<%= ff.text_field :subtypes %>
+					</div>
 				</div>
 				<div class = "box ">
-
-					<%= ff.check_box(:white) %>
-					<%= ff.label(:white, image_tag( src="http://mtgimage.com/symbol/mana/w/32.gif")) %>
-					<%= ff.check_box(:blue) %>
-					<%= ff.label(:blue, image_tag( src="http://mtgimage.com/symbol/mana/u/32.gif")) %>
-					<%= ff.check_box(:black) %>
-					<%= ff.label(:black, image_tag( src="http://mtgimage.com/symbol/mana/b/32.gif")) %>
-					<%= ff.check_box(:red) %>
-					<%= ff.label(:red, image_tag( src="http://mtgimage.com/symbol/mana/r/32.gif")) %>
-					<%= ff.check_box(:green) %>
-					<%= ff.label(:green, image_tag( src="http://mtgimage.com/symbol/mana/g/32.gif")) %>
+					<div class= "input", id="boxes">
+						<%= ff.check_box(:white) %>
+						<%= ff.label(:white, image_tag( src="http://mtgimage.com/symbol/mana/w/32.gif")) %>
+						<%= ff.check_box(:blue) %>
+						<%= ff.label(:blue, image_tag( src="http://mtgimage.com/symbol/mana/u/32.gif")) %>
+						<%= ff.check_box(:black) %>
+						<%= ff.label(:black, image_tag( src="http://mtgimage.com/symbol/mana/b/32.gif")) %>
+						<%= ff.check_box(:red) %>
+						<%= ff.label(:red, image_tag( src="http://mtgimage.com/symbol/mana/r/32.gif")) %>
+						<%= ff.check_box(:green) %>
+						<%= ff.label(:green, image_tag( src="http://mtgimage.com/symbol/mana/g/32.gif")) %>
+					</div>
 				</div>
 				<div class="box ">
+					<div class ="input", id = "boxes">
 						<%= submit_tag("Search") %>
+					</div>
 			 	</div>
 	<% end %>	
 <% end %>
