--- a/app/views/trades/_display_tradeable_wanted_cards.html.erb
+++ b/app/views/trades/_display_tradeable_wanted_cards.html.erb
@@ -10,37 +10,31 @@
 		</tr>
 	</thead>
 	<tbody>
-		<% i = 0 %>
 		<% user.tradeable_cards_wanted_by(@trade.other_user(user)).each do |listed_card| %>
-		<tr>
-			<td>
-			<% if init_or_receiv == "initiator" %>
-				<%= select_tag "trade[cards_from_#{init_or_receiv}][#{listed_card.id.to_i}]", options_for_select((Array.new(listed_card.amount + 1) { |i| i }), @trade.qty_from_initiator[i]), disabled: bool  %>
-				<% elsif %>
-				<%= select_tag "trade[cards_from_#{init_or_receiv}][#{listed_card.id.to_i}]", options_for_select((Array.new(listed_card.amount + 1) { |i| i }), @trade.qty_from_receiver[i]), disabled: bool  %>
-			<% end %>	
-			</td>
-			<td>
-				<% if @trade.other_user(user).wanted_cards.find_by(card_id: listed_card.card_id) != nil %>
-					<%= @trade.other_user(user).wanted_cards.find_by(card_id: listed_card.card_id).amount %>
-				<% else %>
-					None
-				<% end %>
-			</td>
-			<td>
-				<%= listed_card.amount %>
-			</td>
-			<td>
-				<%= listed_card.card.name %>		
-			</td>
-			<td>
-				<%= listed_card.card.card_set.name %>
-			</td>
-			<td>
-				$ 10
-			</td>
-		<% i +=1 %>
-		</tr>
+			<tr>
+				<td>
+					<%= select_tag "trade[cards_from_#{init_or_receiv}][#{listed_card.id.to_i}]", options_for_select((Array.new(listed_card.amount + 1) { |i| i }), @trade.listed_card_qty_in_trade(listed_card, init_or_receiv)), disabled: bool  %>
+				</td>
+				<td>
+					<% if @trade.other_user(user).wanted_cards.find_by(card_id: listed_card.card_id) != nil %>
+						<%= @trade.other_user(user).wanted_cards.find_by(card_id: listed_card.card_id).amount %>
+					<% else %>
+						None
+					<% end %>
+				</td>
+				<td>
+					<%= listed_card.amount %>
+				</td>
+				<td>
+					<%= listed_card.card.name %>		
+				</td>
+				<td>
+					<%= listed_card.card.card_set.name %>
+				</td>
+				<td>
+					$ 10
+				</td>
+			</tr>
 		<% end %>
 	</tbody>
 
