--- a/app/views/trades/edit.html.erb
+++ b/app/views/trades/edit.html.erb
@@ -3,18 +3,36 @@
 	<% if @trade.initiator == current_user %>
 		<%= form_for @trade do |f| %>
 			<h2>Your Cards</h2>
-			<%= render "display_tradeable_cards", :bool => false, :user => @trade.initiator, :init_or_receiv => "initiator"  %>
-			<h2><%= @trade.other_user(current_user).full_name %>'s Cards</h2>
-			<%= render "display_tradeable_cards", :bool => false, :user => @trade.receiver, :init_or_receiv => "receiver"  %>
-			<%= f.submit "Propose Changes" %>
-		<% end %>
+				<ul class="accordion-tabs">
+					<li class="tab-header-and-content">
+						<%= link_to "Trade List", root_url, :class => "tab-link", :remote => true %>
+						<div class="tab-content toggle-select">
+							<%= render "display_tradeable_cards", :bool => false, :user => current_user, :init_or_receiv => @current_user_status %>
+						</div>
+					</li>
+					<li class="tab-header-and-content">
+						<%= link_to "Wanted by #{@user.full_name}", root_url, :class => "tab-link", :remote => true %>
+						<div class="tab-content toggle-select">
+							<%= render "display_tradeable_wanted_cards", :bool => true, :user => current_user, :init_or_receiv => @current_user_status %>
+						</div>
+					</li>
+				</ul>
 
-	<% elsif @trade.receiver == current_user %>
-		<%= form_for @trade do |f| %>
-			<h2>Your Cards</h2>
-			<%= render "display_tradeable_cards", :bool => false, :user => @trade.receiver, :init_or_receiv => "receiver" %>
-			<h2><%= @trade.other_user(current_user).full_name %>'s Cards</h2>
-			<%= render "display_tradeable_cards", :bool => false, :user => @trade.initiator, :init_or_receiv => "initiator"  %>
+				<h2><%= @user.first_name %>'s Cards</h2>
+				<ul class="accordion-tabs">
+					<li class="tab-header-and-content">
+						<%= link_to "Trade List", root_url, :class => "is-active tab-link", :remote => true %>
+						<div class="tab-content toggle-select">
+							<%= render "display_tradeable_cards", :bool => false, :user => @user, :init_or_receiv => @user_status %>
+						</div>
+					</li>
+					<li class="tab-header-and-content">
+						<%= link_to "Wanted by #{current_user.full_name}", root_url, :class => "tab-link", :remote => true %>
+						<div class="tab-content toggle-select">
+							<%= render "display_tradeable_wanted_cards", :bool => true, :user => @user, :init_or_receiv => @user_status %>
+						</div>
+					</li>
+				</ul>
 		<%= f.submit "Propose Changes" %>
 		<% end %>
 	<% end %>
