re-added signed in as and logout button to application view

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,9 +24,9 @@
       <div class= "interface">
         <div class = "signin">
           <% if current_user %>
-            <!-- Signed in as <%= current_user.email %>  -->
-<!--             <%= link_to "Log out", session_path("current"), :method => :delete %> 
- -->          <% end %>
+            Signed in as <%= current_user.email %> 
+            <%= link_to "Log out", session_path("current"), :method => :delete %> 
+       <% end %>
         </div>
 
         <div class = "menu">
