Removed background color on list qtys

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -11,15 +11,15 @@
 
 // Table styling
 .inventory-column {
-	background-color: #F7977A;
+	// background-color: #F7977A;
 }
 
 .tradeable-column {
-	background-color: #FFF79A;
+	// background-color: #FFF79A;
 }
 
 .wanted-column {
-	background-color: #7BCDC8;
+	// background-color: #7BCDC8;
 }
 
 // table.fixed { table-layout:fixed; }
