Displaying card price now

--- a/app/views/cards/_card_display_first.erb
+++ b/app/views/cards/_card_display_first.erb
@@ -33,7 +33,7 @@
 				<%= card.card_set.name %>
 			</td>
 			<td>
-				$4.95
+				<a href="#">$<%= card.price %></a>
 			</td>
 		</tr>
 	<% end %>
