--- a/app/views/cards/_card_display.html.erb
+++ b/app/views/cards/_card_display.html.erb
@@ -40,7 +40,7 @@
 				<%= card.card_set.name %>
 			</td>
 			<td>
-				<a href="#">$4.95</a>
+				<a href="#">$<%= card.price %></a>
 			</td>
 			<td>
 				<%= link_to add_to_inventory_path(card.id), :method => :put do %> 
