--- a/app/views/trades/_display_cancelled_or_complete_trade.html.erb
+++ b/app/views/trades/_display_cancelled_or_complete_trade.html.erb
@@ -4,36 +4,33 @@
 			<th>qty</th>
 			<th>Name</th>
 			<th>Set</th>
-			<th>$</th>
+			<th>TCGMid</th>
 		</tr>
 	</thead>
 	<tbody>
 		<% i = 0 %>
-		<% @trade.send("cards_from_#{init_or_receiv}").each do |card_id| %>
+		<% @trade.get_cards_from_card_ids(init_or_receiv).each do |card| %>
+			<tr>
+				<td>
+					<%= select_tag "trade[cards_from_#{init_or_receiv}][#{card.id.to_i}]", options_for_select((Array.new(@trade.card_qty_in_trade(card.id, init_or_receiv) + 1) { |i| i }), @trade.card_qty_in_trade(card.id, init_or_receiv)), disabled: bool, :class => "#{init_or_receiv}-qty", :data => {:price => card.price}  %>
+				</td>
+				<td>
+					<%= card.name %>		
+				</td>
+				<td>
+					<%= card.card_set.name %>
+				</td>
+				<td>
+					<a href="#">$<%= card.price %></a>
+				</td>
+			</tr>
+		<% end %>
 		<tr>
 			<td>
-				<%= @trade.send("qty_from_#{init_or_receiv}")[i]  %>
+				Total value:
 			</td>
-			<td>
-				<% if init_or_receiv == "initiator" %>
-					<%= @card_ids_from_initiator[i].name unless @card_ids_from_initiator == nil %>
-				<% else %>
-					<%= @card_ids_from_receiver[i].name unless @card_ids_from_receiver == nil  %>
-				<% end %>		
-			</td>
-			<td>
-				<% if init_or_receiv == "initiator" %>
-					<%= @card_ids_from_initiator[i].card_set.name unless @card_ids_from_initiator == nil %>
-				<% else %>
-					<%= @card_ids_from_receiver[i].card_set.name unless @card_ids_from_receiver == nil %>
-				<% end %>	
-			</td>
-			<td>
-				$ 10
-			</td>
-		<% i +=1 %>
+			<td id=<%= "card-total-#{init_or_receiv}" %>></td>
 		</tr>
-		<% end %>
 	</tbody>
 
 </table>
