--- a/app/views/users/_find_cards.html.erb
+++ b/app/views/users/_find_cards.html.erb
@@ -13,7 +13,7 @@
 			Set
 		</th>
 		<th>
-			$$$
+			TCGMid
 		</th>
 		<th>
 			Add to Trade Binder
@@ -38,7 +38,7 @@
 					<%= card.card_set.name %>
 				</td>
 				<td>
-					$4.95
+					<a href="#">$<%= card.price %></a>
 				</td>
 			</tr>
 		<% end %>
