--- a/app/views/users/_tradeable_list.html.erb
+++ b/app/views/users/_tradeable_list.html.erb
@@ -20,6 +20,9 @@
 						<h4>Set</h4>
 					</th>						
 					<th>
+						<h4>TCGMid</h4>
+					</th>
+					<th>
 						<h4>Type</h4>
 					</th>
 
@@ -54,6 +57,9 @@
 							</td>
 							<td>
 								<%= listed_card.card.card_set.name %>
+							</td>
+							<td>
+								<a href="#">$<%= listed_card.card.price %></a>
 							</td>
 							<% type_array = [] %>
 							<%  listed_card.card.card_types.each { |type| type_array << type.name  } %>
