--- a/app/views/users/_wanted_list.html.erb
+++ b/app/views/users/_wanted_list.html.erb
@@ -19,14 +19,16 @@
 						<h4>Set</h4>
 					</th>						
 					<th>
+						<h4>TCGMid</h4>
+					</th>
+					<th>
 						<h4>Type</h4>
 					</th>
-
 					<th>
 						<h4>Cost</h4>
 					</th>
 					<th>
-						<h4>Actions</h4>
+						Actions
 					</th>
 				</tr>
 
@@ -56,6 +58,9 @@
 							</td>
 							<td>
 								<%= listed_card.card.card_set.name %>
+							</td>
+							<td>
+								<a href="#">$<%= listed_card.card.price %></a>
 							</td>
 							<% type_array = [] %>
 							<%  listed_card.card.card_types.each { |type| type_array << type.name  } %>
